<resources>

    <!--    text panel central   -->
    <string name="app_name">superhero app 2</string>
    <string name="supName"> </string>
    <string name="btnStats">Power Stats</string>
    <string name="btnBiography">Biography</string>
    <string name="btnAppearance">Appearance</string>
    <string name="btnWork">Work</string>
    <string name="btnConnections">Connections</string>
    <string name="btnImage">Image</string>
    <string name="api_key">3539424979434165</string>

    <!--    text powerstats   -->
    <string name="txtIntelligence">Intelligence</string>
    <string name="txtStrength">Strength</string>
    <string name="txtSpeed">Speed</string>
    <string name="txtDurability">Durability</string>
    <string name="txtPower">Power</string>
    <string name="txtCombat">Combat</string>

    <!--    text biography   -->
    <string name="txtFullName">Full Name</string>
    <string name="txtAlterEgos">Alter Egos</string>
    <string name="txtAliases">Aliases</string>
    <string name="txtPlaceofBirth">Place of Birth</string>
    <string name="txtFirstAppearance">First Appearance</string>
    <string name="txtPublisher">Publisher</string>
    <string name="txtAlignment">Alignment</string>

    <!--    text appearance   -->
    <string name="txtGender">Gender</string>
    <string name="txtRace">Race</string>
    <string name="txtHeight">Height</string>
    <string name="txtWeight">Weight</string>
    <string name="txtEyeColor">Eye Color</string>
    <string name="txtHairColor">Hair Color</string>

    <!--    text work   -->
    <string name="txtOccupation">Occupation</string>
    <string name="txtBaseofOperation">Base of Operation</string>

    <!--    text connections   -->
    <string name="txtGroupAffiliation">Group Affiliation</string>
    <string name="txtRelatives">Relatives</string>

</resources>