<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background">


    <TextView
            android:text="@string/txtGender"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtGen"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"/>
    <TextView
            android:text="@string/txtRace"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtRace"
            app:layout_constraintStart_toStartOf="@+id/txtGen" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtGen"/>
    <TextView
            android:text="@string/txtHeight"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtHeigth"
            app:layout_constraintStart_toStartOf="@+id/txtRace" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtRace"/>
    <TextView
            android:text="@string/txtWeight"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtWeigth"
            app:layout_constraintStart_toStartOf="@+id/txtHeigth" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHeigth"/>
    <TextView
            android:text="@string/txtEyeColor"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtEye"
            app:layout_constraintStart_toStartOf="@+id/txtWeigth" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtWeigth"/>
    <TextView
            android:text="@string/txtHairColor"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtHair"
            app:layout_constraintStart_toStartOf="@+id/txtEye" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEye"/>
</androidx.constraintlayout.widget.ConstraintLayout>