<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background">


    <TextView
            android:text="@string/txtPower"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtPower"
            app:layout_constraintStart_toStartOf="@+id/txtDurability" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDurability"/>
    <TextView
            android:text="@string/txtSpeed"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtSpeed"
            app:layout_constraintStart_toStartOf="@+id/txtStrength" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtStrength"/>
    <TextView
            android:text="@string/txtIntelligence"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtIntel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="116dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"/>
    <TextView
            android:text="@string/txtStrength"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtStrength"
            app:layout_constraintStart_toStartOf="@+id/txtIntel" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtIntel"/>
    <TextView
            android:text="@string/txtDurability"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtDurability"
            app:layout_constraintStart_toStartOf="@+id/txtSpeed" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSpeed"/>
    <TextView
            android:text="@string/txtCombat"
            android:layout_width="306dp"
            android:layout_height="57dp" android:id="@+id/txtCombat"
            app:layout_constraintStart_toStartOf="@+id/txtPower" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPower"/>
</androidx.constraintlayout.widget.ConstraintLayout>